--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,26 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --background: theme(colors.neutral.100);
+    ---background: theme(colors.neutral.50);
+    --foreground: theme(colors.neutral.800);
+    --primary: theme(colors.green.300);
+    --danger: theme(colors.red.300);
+    ---danger: theme(colors.red.600);
+  }
+
+  /* If user browser set to dark */
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --background: theme(colors.neutral.900);
+      ---background: theme(colors.neutral.800);
+      --foreground: theme(colors.neutral.100);
+      --primary: theme(colors.green.600);
+      --danger: theme(colors.red.600);
+      ---danger: theme(colors.red.300);
+    }
+  }
   * {
     @apply text-1;
   }
@@ -233,4 +253,77 @@
       opacity: 0;
     }
   }
+}
+
+.instagram-follow-button {
+  background-color: #e1306c;
+  color: white;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+.instagram-follow-button:hover {
+  background-color: #c13584;
+}
+
+.btn:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.btn:hover {
+  color: var(--background);
+  border: 1px solid var(--primary);
+}
+
+.btn:hover:before {
+  top: -35%;
+  background-color: var(--primary);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.btn:hover:after {
+  top: -45%;
+  background-color: var(--primary);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.btn:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: var(--primary);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.btn {
+  font-weight: bold;
+  font-size: 16px;
+  padding: 6px 10px;
+  display: inline-block;
+  border: 1px solid var(--foreground);
+  border-radius: 4px;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  color: var(--foreground);
+  z-index: 1;
 }
