--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -6,9 +6,9 @@
 
   /* App custom colors variables */
   :root {
-    --foreground: theme(colors.slate.900);
-    --background: theme(colors.slate.100);
-    --t-background: theme(colors.slate.200);
+    --foreground: theme(colors.lime.950);
+    --background: theme(colors.lime.50);
+    --t-background: theme(colors.lime.100);
     --primary: theme(colors.blue.300);
     --t-primary: theme(colors.blue.600);
     --danger: theme(colors.red.300);
@@ -19,19 +19,19 @@
     --t-success: theme(colors.green.600);
   }
 
-  @media (prefers-color-scheme: dark) {
+  @media (prefers-color-scheme: -dark) {
     :root {
-      --foreground: theme(colors.neutral.100);
-      --background: theme(colors.neutral.900);
-      --t-background: theme(colors.neutral.800);
-      --primary: theme(colors.blue.800);
+      --foreground: theme(colors.blue.50);
+      --background: theme(colors.blue.950);
+      --t-background: theme(colors.blue.900);
+      --primary: theme(colors.blue.600);
       --t-primary: theme(colors.blue.300);
-      --danger: theme(colors.red.800);
-      --t-danger: theme(colors.red.400);
-      --alert: theme(colors.yellow.800);
-      --t-alert: theme(colors.yellow.400);
-      --success: theme(colors.green.800);
-      --t-success: theme(colors.green.400);
+      --danger: theme(colors.red.600);
+      --t-danger: theme(colors.red.300);
+      --alert: theme(colors.yellow.600);
+      --t-alert: theme(colors.yellow.300);
+      --success: theme(colors.green.600);
+      --t-success: theme(colors.green.300);
     }
   }
 
